Curso Web Moderno Udemy

--- a/html/exercicios/texto1.html
+++ b/html/exercicios/texto1.html
@@ -22,3 +22,8 @@
 
 <!-- Sobrescrito e Subscrito -->
 <p>2 <sup>2</sup> = 4 e H <sub>2</sub>0 = Água!</p>
+
+<!-- Espaços em branco -->
+<p>Espaço
+  entre
+  palavras</p>
