--- a/css/especificidade1.html
+++ b/css/especificidade1.html
@@ -2,15 +2,37 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Especificidade CSS</title>
-    <style>
-        /* https://developer.mozilla.org/pt-BR/docs/Web/CSS/Specificity */
-    </style>
+  <meta charset="UTF-8">
+  <title>Especificidade CSS</title>
+  <style>
+    /* https://developer.mozilla.org/pt-BR/docs/Web/CSS/Specificity */
+    /*
+    1. regra com !important
+    2. seletores mais especificos
+    3. ultima regra processada
+    */
+
+    p {
+      background-color: #aaa;
+    }
+
+    .observacao {
+      background-color: #5f5;
+      border: dashed 5px;
+      padding: 20px !important;
+      /* evitar usar o !important */
+      font-size: 40px;
+    }
+
+    p.observacao {
+      padding: 2px;
+      background: linear-gradient(to right, red, yellow);
+    }
+  </style>
 </head>
 
 <body>
-    <p class='observacao'>Olha essa observação!!!!</p>
+  <p class='observacao'>Olha essa observação!!!!</p>
 </body>
 
 </html>
