--- a/css/unidades1.html
+++ b/css/unidades1.html
@@ -2,16 +2,39 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <title>Unidades #01</title>
-    <style>
-        /* ... */
-    </style>
+  <meta charset="UTF-8">
+  <title>Unidades #01</title>
+  <style>
+    .unidades-absolutas {
+      position: absolute;
+      font-size: 40px;
+      padding: 20px;
+      border: solid 5px #222;
+      margin: 30px;
+      width: 4cm;
+      /* Pouco usado */
+      height: 20mm;
+      /* Pouco usado */
+      top: 150px;
+      left: 200px;
+    }
+
+    .unidades-relativas {
+      position: absolute;
+      font-size: 3em;
+      padding: 5%;
+      border: solid 1vw #222;
+      margin: .8%;
+      height: 15vh;
+      bottom: 5%;
+      right: 5%;
+    }
+  </style>
 </head>
 
 <body>
-    <div class="unidades-absolutas">Opa!</div>
-    <div class="unidades-relativas">Epa!</div>
+  <div class="unidades-absolutas">Opa!</div>
+  <div class="unidades-relativas">Epa!</div>
 </body>
 
 </html>
